--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "braintree-web-drop-in": "^1.43.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/braintree-web-drop-in": "^1.39.3",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
